--- a/package.json
+++ b/package.json
@@ -2,15 +2,11 @@
   "name": "grocery",
   "version": "0.0.0",
   "private": true,
- "scripts": {
-   "client-install": "npm install --prefix client",
-   "start": "node server.js",
-   "server": "nodemon server.js",
-   "client": "npm start --prefix client",
-   "dev": "concurrently \"npm run server\" \"npm run client\"",
-   "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client  &&
-     npm run build--prefix client "
- },
+  "scripts": {
+    "start": "node bin/www",
+    "dev": "concurrently \"nodemon bin/www\" \"cd ./client  && npm start \" ",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
